Update pom.xml
tester12

Signed-off-by: Surafeal <114921940+Suramita@users.noreply.github.com>